public class DatabaseOperation {
    public void save(String data) {
        System.out.println("Saving encrypted data to database: " + data);
    }
}
