public interface Encryptor {
    String encrypt(String data);
}
