public class ThirdPartyEncryption {
    // 假设这是第三方提供的加密类，我们无法修改其源代码
    public String encode(String data) {
        return "ThirdParty-Encoded:" + data;
    }
}
